@@ -20,6 +20,8 @@ Legend:
   really need a DXVA decoder, you can use a standalone version of MPC Video Decoder.
 + Support loading HTTP/RTSP/UDP/RTP streams using embedded source filters
 + D3DFullscreen can now switch to windowed mode (just like regular fullscreen mode)
++ Audio Switcher: Show all audio tracks available, including all the embedded tracks exhibited by the
+  source filter and the external tracks.
 + Ticket #533, Add a command line switch (/device) to open the default video device
 + Ticket #3107, Add support for playing from standard input.
   Use "-" as a special filename to designate the standard input.
